cmake_minimum_required(VERSION 3.6)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(public/src)

##add_subdirectory(rchavali/ps2/bounce)
##add_subdirectory(rchavali/ps2/cannonball)
##add_subdirectory(rchavali/ps3/flythrough)
##add_subdirectory(rchavali/ps3/orbit)
##add_subdirectory(rchavali/simplebitmap)
##add_subdirectory(rchavali/hashutil)
##add_subdirectory(rchavali/ps4/ps4_1)
##add_subdirectory(rchavali/ps4/ps4_2)

##add_subdirectory(rchavali/ps5/ps5_1)
##add_subdirectory(rchavali/ps5/ps5_2)
##add_subdirectory(rchavali/ps5/bintreeutil)

##add_subdirectory(rchavali/ps6/ps6_1)
##add_subdirectory(rchavali/ps6/ps6_2)
##add_subdirectory(rchavali/ps6/polygonalmesh)
##add_subdirectory(rchavali/ps6/naca)

##add_subdirectory(rchavali/glutil)
##add_subdirectory(rchavali/meshlattice)
##add_subdirectory(rchavali/ps7)

##add_subdirectory(rchavali/ps8/ps8_1)
##add_subdirectory(rchavali/ps8/ps8_2)

##add_subdirectory(rchavali/ps9/ps9_1)
##add_subdirectory(rchavali/ps9/ps9_2)

add_subdirectory(rchavali/project)